// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialogsVisibilityReducer should close all dialogs 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "help": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should initialize to all dialogs closed 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "help": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the export dialog 1`] = `
Object {
  "export": true,
  "exportProgress": false,
  "help": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the export progress dialog 1`] = `
Object {
  "export": false,
  "exportProgress": true,
  "help": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the help dialog 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "help": true,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the prefill dialog 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "help": false,
  "prefill": true,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the tips dialog 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "help": false,
  "tips": true,
}
`;
